show full description for objectives; fix Back to top alignment in Objectives tab and Implementation tab

--- a/nbsap/static/css/style.css
+++ b/nbsap/static/css/style.css
@@ -888,8 +888,8 @@ h2 p {
     margin-top: 5px;
 }
 
-.element_field.well.objective-description {
-    padding: 10px 19px;
+.element_field.objective-description {
+    padding: 10px 19px 10px 0px;
 }
 
 .more,
